# kalibr

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_ros1_16_04  Dockerfile_ros1_18_04  Dockerfile_ros1_20_04  LICENSE  README.md  README.txt  docker_entrypoint.bash  run_docker.sh  use-system-installation-of-eigen.cmake
Schweizer-Messer/numpy_eigen/: CMakeLists.txt  package.xml
Schweizer-Messer/numpy_eigen/cmake/: add_python_export_library.cmake
Schweizer-Messer/numpy_eigen/include/numpy_eigen/: NumpyEigenConverter.hpp  boost_python_headers.hpp  copy_routines.hpp  type_traits.hpp
Schweizer-Messer/numpy_eigen/src/: create_export_module.py  generator_config.py
Schweizer-Messer/numpy_eigen/src/autogen_module/: import_1_1_double.cpp  import_1_1_float.cpp  import_1_1_long.cpp  import_1_2_double.cpp  import_1_2_float.cpp  import_1_2_uchar.cpp  import_1_3_double.cpp  import_1_3_float.cpp  import_1_3_int.cpp  import_1_3_long.cpp  import_1_4_double.cpp  import_1_4_float.cpp  import_1_4_uchar.cpp  import_1_5_double.cpp  import_1_5_float.cpp  import_1_5_long.cpp  import_1_5_uchar.cpp  import_1_6_float.cpp  import_1_6_uchar.cpp  import_1_D_double.cpp  import_1_D_float.cpp  import_1_D_int.cpp  import_1_D_long.cpp  import_1_D_uchar.cpp  import_2_1_double.cpp  import_2_1_float.cpp  import_2_1_long.cpp  import_2_1_uchar.cpp  import_2_2_double.cpp  import_2_2_float.cpp  import_2_2_int.cpp  import_2_2_uchar.cpp  (+145 more)
Schweizer-Messer/numpy_eigen/test/: numpy_eigen_tests.py
Schweizer-Messer/python_module/: CMakeLists.txt  package.xml
Schweizer-Messer/python_module/cmake/: add_python_export_library.cmake
Schweizer-Messer/sm_boost/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_boost/src/: JobQueue.cpp  portable_binary_iarchive.cpp  portable_binary_oarchive.cpp
Schweizer-Messer/sm_boost/test/: testFuture.cpp
Schweizer-Messer/sm_common/: CMakeLists.txt  mainpage.dox  package.xml
Schweizer-Messer/sm_common/cmake/: export_flags.cmake
Schweizer-Messer/sm_common/src/: progress_info.cpp
Schweizer-Messer/sm_common/test/: assert_macros.cpp  assert_macros_always_assert.cpp  assert_macros_dbg.cpp  hash_id.cpp  maths.cpp  numerical_comparisons.cpp  serialization_macros.cpp
Schweizer-Messer/sm_database/: package.xml
Schweizer-Messer/sm_database/cmake/: FindSqlite3.cmake
Schweizer-Messer/sm_database/src/: Database.cpp
Schweizer-Messer/sm_doc/: package.xml
asl_cmake_modules/: CMakeLists.txt  README.md  package.xml
asl_cmake_modules/cmake/: asl_cmake_modules-extras.cmake.develspace.in
asl_cmake_modules/cmake/Modules/: FindPoco.cmake
aslam_backend_bsplines_tutorial/: CMakeLists.txt  package.xml
aslam_backend_bsplines_tutorial/src/: ErrorTermMotionBST.cpp  ErrorTermPriorBST.cpp
aslam_backend_expressions/: CMakeLists.txt  notes.txt  package.xml
aslam_backend_expressions/src/: EuclideanDirection.cpp  EuclideanExpressionNode.cpp  EuclideanPoint.cpp  HomogeneousExpression.cpp  MatrixBasic.cpp  MatrixExpressionNode.cpp  RotationExpressionNode.cpp  RotationQuaternion.cpp  ScalarExpressionNode.cpp
aslam_backend_expressions/test/: ErrorTest_Euclidean.cpp  ExpressionErrorTermTest.cpp  ExpressionUtils.cpp  GenericMatrixExpression.cpp  HomogeneousExpression.cpp  Profiling.cpp  QuaternionExpression.cpp  RotationExpression.cpp  test_main.cpp
aslam_backend_python/: CMakeLists.txt
aslam_backend_python/src/: Backend.cpp  BackendDesignVariables.cpp  BackendExpressions.cpp  CompressedColumnMatrix.cpp  DesignVariable.cpp  DesignVariableTimePair.cpp  ErrorTerm.cpp  JacobianContainer.cpp  LinearSystemSolver.cpp  MEstimators.cpp  OptimizationProblem.cpp  OptimizerOptions.cpp  SampleDvAndError.cpp  Sampler.cpp
aslam_backend_tutorial/: mainpage.dox  package.xml  setup.py
aslam_backend_tutorial/python_example/: example.py
aslam_backend_tutorial/src/: example.cpp
aslam_backend_tutorial/tex/: homogeneous_points.tex  notation-math-defs.tex
aslam_backend_tutorial/tex/figs/: eth_logo_black.eps
bsplines/: CMakeLists.txt  mainpage.dox  package.xml
bsplines/include/bsplines/: DynamicOrTemplateInt.hpp  NodeDistributedCache.hpp  NsecTimePolicy.hpp  NumericIntegrator.hpp  SimpleTypeTimePolicy.hpp  UnitQuaternionBSpline.hpp
bsplines/interp_rotation/: invariance2.py  testManifoldBSplines.py
bsplines/interp_rotation/diffManifoldBSplines/: __init__.py
bsplines/latex/orientation/: .gitignore  notation-math-defs.tex
bsplines/test/: DiffManifoldBSplineTests.cpp  DiffManifoldBSplineTests.hpp  NumericIntegratorTests.cpp  UnitQuaternionBSplineTests.cpp
bsplines_python/: CMakeLists.txt  package.xml  setup.py
bsplines_python/python/bsplines/: __init__.py
bsplines_python/src/: BSplinePython.cpp  RotationalKinematicsPython.cpp  SplinePython.cpp
bsplines_python/test/: BSplineTests.py  DiffManifoldBSplineFittingExperiments.py  SplineTests.py
catkin_simple/: CMakeLists.txt  README.md  package.xml
catkin_simple/cmake/: catkin_simple-extras.cmake.em
eigen_catkin/: .gitignore  CMakeLists.txt  package.xml
eigen_catkin/cmake/: eigen-extras.cmake.in
opencv2_catkin/: CMakeLists.txt  README.md  package.xml
opencv2_catkin/cmake/: opencv2-extras.cmake.in
sm_common/: CMakeLists.txt
sm_common/include/sm/: Id.hpp  aligned_allocation.h  assert_macros.hpp  maths.hpp  serialization_macros.hpp  source_file_pos.hpp
sm_common/src/: hash_id.cpp
sm_database/: CMakeLists.txt  mainpage.dox
sm_database/test/: SerializedMap.cpp
sm_doc/: CMakeLists.txt  mainpage.dox
sm_doc/doc/: doxygen.config.in
sm_eigen/: CMakeLists.txt  package.xml
sm_kinematics/: CMakeLists.txt
sm_kinematics/src/: EulerRodriguez.cpp  HomogeneousPoint.cpp  RotationVector.cpp
sm_kinematics/test/: PointTestHarness.hpp  QuaternionTests.cpp  TransformationTests.cpp  UncertainHomogeneousPoint.cpp  homogeneous_coordinates.cpp  transformations.cpp
suitesparse/: CMakeLists.txt  README.md  package.xml
suitesparse/cmake/: suitesparse-extras.cmake.in
suitesparse/include/: README
suitesparse_catkin/: CMakeLists.txt  README.md  package.xml
suitesparse_catkin/cmake/: suitesparse_catkin-extras.cmake.in
(+1732 files in other folders)
