<?xml version="1.0"?>
<package>
  <name>asl_cmake_modules</name>
  <version>0.0.1</version> 
  <description>CMake scripts managed by ASL</description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
