<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>aslam_backend_bsplines_tutorial</name>
  <version>0.0.1</version>
  <description>aslam_backend_bsplines_tutorial</description>
  <maintainer email="mathias.buerki@mavt.ethz.ch">Mathias Buerki</maintainer>
  <author>Mathias Buerki</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>aslam_backend</build_depend>
  <build_depend>aslam_backend_expressions</build_depend>
  <build_depend>aslam_splines</build_depend>
  <build_depend>bsplines</build_depend>
  <build_depend>sm_kinematics</build_depend>

  <run_depend>aslam_backend</run_depend>
  <run_depend>aslam_backend_expressions</run_depend>
  <run_depend>aslam_splines</run_depend>
  <run_depend>bsplines</run_depend>
  <run_depend>sm_kinematics</run_depend>

</package>
