<package>
  <name>aslam_backend_tutorial</name>
  <version>0.0.1</version>
  <description>aslam_backend_tutorial</description>
  <maintainer email="paulfurgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>aslam_backend</build_depend>
  <build_depend>numpy_eigen</build_depend>
  <build_depend>aslam_backend_python</build_depend>
  <build_depend>python_module</build_depend>
  <build_depend>suitesparse</build_depend>

  <run_depend>aslam_backend</run_depend>
  <run_depend>numpy_eigen</run_depend>
  <run_depend>aslam_backend_python</run_depend>
</package>

