<?xml version="1.0"?>
<package>
  <name>eigen_catkin</name>
  <version>0.0.301</version> 
  <description>eigen_catkin</description>
  <maintainer email="schneith@ethz.ch">Thomas Schneider</maintainer>
  <author>ASL</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
</package>
