<?xml version="1.0"?>
<package>
  <name>numpy_eigen</name>
  <version>0.0.1</version>
  <description>numpy_eigen</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>python_module</build_depend>
  <run_depend>python_module</run_depend>
  <test_depend>roslib</test_depend>
  <test_depend>rostest</test_depend>
</package>
