<?xml version="1.0"?>
<package format="3">
  <name>python_module</name>
  <version>0.0.1</version>
  <description>python_module</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</build_depend>
</package>
