<?xml version="1.0"?>
<package>
  <name>sm_boost</name>
  <version>0.0.1</version>
  <description>sm_boost</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>sm_common</build_depend>
  <run_depend>sm_common</run_depend>
  <test_depend>gtest</test_depend>
</package>
