<?xml version="1.0"?>
<package format="3">
  <name>sm_common</name>
  <version>0.0.1</version>
  <description>sm_common</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_export_depend>boost</build_export_depend>
  <test_depend>gtest</test_depend>
</package>
