<?xml version="1.0"?>
<package>
  <name>sm_database</name>
  <version>0.0.1</version>
  <description>sm_database</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>sm_common</build_depend>
  <build_depend>sm_boost</build_depend>
  <build_depend>sqlite3</build_depend>
  
  <run_depend>sm_common</run_depend>
  <run_depend>sm_boost</run_depend>
  <run_depend>sqlite3</run_depend>

  <test_depend>gtest</test_depend>
</package>
