<?xml version="1.0"?>
<package>
  <name>sm_doc</name>
  <version>0.0.1</version>
  <description>sm_doc</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
